#
# Copyright (C) 2019 Assured Information Security, Inc.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

add_subdirectory(add_const)
add_subdirectory(add_lvalue_reference)
add_subdirectory(add_rvalue_reference)
#add_subdirectory(arguments)
add_subdirectory(conditional)
add_subdirectory(declval)
add_subdirectory(discard)
add_subdirectory(enable_if)
add_subdirectory(is_assignable)
add_subdirectory(is_base_of)
add_subdirectory(is_bool)
add_subdirectory(is_class)
add_subdirectory(is_compound)
add_subdirectory(is_const)
add_subdirectory(is_constructible)
add_subdirectory(is_copy_assignable)
add_subdirectory(is_copy_constructible)
add_subdirectory(is_default_constructible)
add_subdirectory(is_empty)
add_subdirectory(is_enum)
add_subdirectory(is_function)
add_subdirectory(is_fundamental)
add_subdirectory(is_integral)
add_subdirectory(is_lvalue_reference)
add_subdirectory(is_member_function_pointer)
add_subdirectory(is_member_object_pointer)
add_subdirectory(is_member_pointer)
add_subdirectory(is_move_assignable)
add_subdirectory(is_move_constructible)
add_subdirectory(is_null_pointer)
add_subdirectory(is_object)
add_subdirectory(is_pod)
add_subdirectory(is_pointer)
add_subdirectory(is_reference)
add_subdirectory(is_rvalue_reference)
add_subdirectory(is_same)
add_subdirectory(is_scalar)
add_subdirectory(is_signed)
add_subdirectory(is_standard_layout)
add_subdirectory(is_trivial)
add_subdirectory(is_unsigned)
add_subdirectory(is_void)
add_subdirectory(main)
add_subdirectory(make_signed)
add_subdirectory(make_unsigned)
add_subdirectory(move)
#add_subdirectory(numeric_limits)
add_subdirectory(remove_const)
add_subdirectory(remove_reference)
add_subdirectory(swap)
add_subdirectory(type_identity)
add_subdirectory(underlying_type)
add_subdirectory(void_t)
