#
# Copyright (C) 2019 Assured Information Security, Inc.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

add_subdirectory(add_const)
add_subdirectory(add_lvalue_reference)
add_subdirectory(add_pointer)
add_subdirectory(add_rvalue_reference)
add_subdirectory(aligned_storage)
add_subdirectory(alignment_of)
add_subdirectory(as_const)
add_subdirectory(byte)
add_subdirectory(common_type)
add_subdirectory(conditional)
add_subdirectory(construct_at)
add_subdirectory(decay)
add_subdirectory(declval)
add_subdirectory(destroy_at)
add_subdirectory(discard)
add_subdirectory(enable_if)
add_subdirectory(errc_type)
add_subdirectory(exchange)
add_subdirectory(extent)
add_subdirectory(forward)
add_subdirectory(function)
add_subdirectory(has_virtual_destructor)
add_subdirectory(integer_sequence)
add_subdirectory(integral_constant)
add_subdirectory(is_abstract)
add_subdirectory(is_aggregate)
add_subdirectory(is_arithmetic)
add_subdirectory(is_array)
add_subdirectory(is_assignable)
add_subdirectory(is_base_of)
add_subdirectory(is_bool)
add_subdirectory(is_bounded_array)
add_subdirectory(is_class)
add_subdirectory(is_compound)
add_subdirectory(is_const)
add_subdirectory(is_constructible)
add_subdirectory(is_convertible)
add_subdirectory(is_copy_assignable)
add_subdirectory(is_copy_constructible)
add_subdirectory(is_default_constructible)
