#
# Copyright (C) 2019 Assured Information Security, Inc.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

# add_executable(examples_contracts_autosar_compliant autosar_compliant.cpp)
# add_executable(examples_contracts_continue_option continue_option.cpp)
# add_executable(examples_contracts_general_usage general_usage.cpp)
# add_executable(examples_contracts_set_violation_handler set_violation_handler.cpp)

# add_executable(examples_contracts_expects expects.cpp)
# add_executable(examples_contracts_ensures ensures.cpp)
# add_executable(examples_contracts_assert assert.cpp)

# add_executable(examples_contracts_expects_audit expects_audit.cpp)
# add_executable(examples_contracts_ensures_audit ensures_audit.cpp)
# add_executable(examples_contracts_assert_audit assert_audit.cpp)

# add_executable(examples_contracts_expects_axiom expects_axiom.cpp)
# add_executable(examples_contracts_ensures_axiom ensures_axiom.cpp)
# add_executable(examples_contracts_assert_axiom assert_axiom.cpp)
